--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     ]
   },
   "scripts": {
+    "postinstall": "webpack",
     "build": "webpack --mode production",
     "start": "node server/",
     "dev": "webpack --mode development --watch & nodemon server"
