--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "nodemonConfig": {
     "watch": [
       "server/"
-    ],    
+    ],
     "ignore": [
       "client/"
     ]
@@ -45,9 +45,10 @@
     "redux-thunk": "^2.3.0",
     "superagent": "^3.8.3",
     "webpack": "^4.18.0",
-    "webpack-cli": "^3.1.0"    
+    "webpack-cli": "^3.1.0"
   },
   "devDependencies": {
-    "nodemon": "^1.18.4"
+    "nodemon": "^1.18.4",
+    "standard": "^12.0.1"
   }
 }
