--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "scripts": {
     "build": "webpack --mode production",
     "start": "node server/",
-    "dev": "webpack --mode development --watch"
+    "dev": "webpack --mode development --watch & nodemon server"
   },
   "babel": {
     "presets": [
