--- a/package.json
+++ b/package.json
@@ -33,18 +33,22 @@
     "babel-preset-stage-0": "^6.24.1",
     "babel-runtime": "^6.26.0",
     "bcrypt": "^3.0.1",
+    "css-loader": "^1.0.0",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "express-jwt": "^5.3.1",
     "jsonwebtoken": "^8.3.0",
     "jwt-decode": "^2.2.0",
     "mongoose": "^5.2.14",
+    "node-sass": "^4.9.3",
     "react": "^16.5.0",
     "react-dom": "^16.5.0",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.0",
     "superagent": "^3.8.3",
     "webpack": "^4.19.1",
     "webpack-cli": "^3.1.0"
