--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "babel-runtime": "^6.26.0",
-    "bcrypt": "^3.0.1",
+    "bcrypt": "^1.0.3",
     "css-loader": "^1.0.0",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
@@ -48,6 +48,8 @@
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0",
     "sass-loader": "^7.1.0",
+    "socket.io": "^2.1.1",
+    "socket.io-client": "^2.1.1",
     "style-loader": "^0.23.0",
     "superagent": "^3.8.3",
     "webpack": "^4.19.1",
